--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
             <version>5.1.0.RELEASE</version>
         </dependency>
 
-        <!-- JSTL Dependency -->
+         <!-- JSTL Dependency -->
         <dependency>
             <groupId>javax.servlet.jsp.jstl</groupId>
             <artifactId>javax.servlet.jsp.jstl-api</artifactId>
@@ -44,12 +44,8 @@
             <artifactId>javax.servlet.jsp-api</artifactId>
             <version>2.3.1</version>
             <scope>provided</scope>
-        </dependency><dependency>
-            <groupId>net.minidev</groupId>
-            <artifactId>accessors-smart</artifactId>
-            <version>2.4.8</version>
         </dependency>
-        
+               
         <!-- Javax Validation API -->
 		<dependency>
 		    <groupId>javax.validation</groupId>
@@ -64,12 +60,12 @@
 		    <version>6.2.5.Final</version>
 		</dependency>
 		
-		<!-- Jakarta Validation -->
+		<!-- Jakarta Validation 
 		<dependency>
 		    <groupId>jakarta.validation</groupId>
 		    <artifactId>jakarta.validation-api</artifactId>
 		    <version>3.0.2</version>
-		</dependency>
+		</dependency>-->
 
 		<!-- MSSQL JDBC -->
 		<dependency>
@@ -77,23 +73,13 @@
     		<artifactId>mssql-jdbc</artifactId>
     		<version>12.2.0.jre11</version>
 		</dependency>
-		
-		<!-- JUnit Jupiter API -->
-		<dependency>
-		    <groupId>org.junit.jupiter</groupId>
-		    <artifactId>junit-jupiter-api</artifactId>
-		    <version>5.9.2</version>
-		    <scope>test</scope>
-		</dependency>
-		
-		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-test -->
-		<dependency>
-		    <groupId>org.springframework.boot</groupId>
-		    <artifactId>spring-boot-starter-test</artifactId>
-		    <version>3.0.2</version>
-		    <scope>test</scope>
-		</dependency>
 
+		<!-- Bootstrap 
+		<dependency>
+		    <groupId>org.webjars</groupId>
+		    <artifactId>bootstrap</artifactId>
+		    <version>5.2.3</version>
+		</dependency>-->
      </dependencies>
     <build>
         <sourceDirectory>src/main/java</sourceDirectory>
